fix z-index in footer and add links to social icons

--- a/main/assets/css/components/_footer.scss
+++ b/main/assets/css/components/_footer.scss
@@ -11,7 +11,7 @@
 
   padding: var(--top-padding) 0 var(--bottom-padding);
   margin-top: calc(var(--bottom-padding) - var(--top-padding));
-  z-index: -1;
+  z-index: 0;
 
   .nav__logo__container {
     width: 100%;
