--- a/main/assets/css/custom-style/_shared-styles.scss
+++ b/main/assets/css/custom-style/_shared-styles.scss
@@ -69,3 +69,10 @@ main {
 }
 
 
+// +++++++++++++++++
+// ++ CTA STYLES ++
+// +++++++++++++++++
+
+.cta {
+  z-index: 1;
+}
